--- a/index.html
+++ b/index.html
@@ -36,7 +36,13 @@
         <input type='radio' name='religion' id='other' value='Other'>
         <label for='other'>Other</label>
       </div>
-      <button class="btn btn-success" type=submit>Submit Answers!</button>
+      <button class="btn btn-success" id="submit" type=submit>Submit Answers!</button>
+      <button class="btn btn-success" id="reset" type=reset>Reset Quiz</button>
     </form>
+    <div id="hiddenCage">
+      <h3>Congratulations, it's Nicolas Cage!</h3>
+      <p>He's everybody's perfect match!</p>
+      <img src="img/cage.jpeg">
+    </div>
   </body>
 </html>
