add functionality to js for incomplete forms
Co-authored-by: Tristan Emmerson <tristan@stickerslug.com>

--- a/index.html
+++ b/index.html
@@ -15,26 +15,35 @@
       </div>      
     </div>
 
-    <form>
+    <div id="underAge">
+      <h2>Go away kid, you're bothering me.</h2>
+    </div>
+    <form id="hiddenQuiz">
       <div class="form-group">
         <p>Pick a gender:  </p>
-        <input type='radio' name='gender' id='male' value='male'>
-        <label for='male'>Male</label>
-        <input type='radio' name='gender' id='female' value='female'>
-        <label for='female'>Female</label>
-        <input type='radio' name='gender' id='other' value='other'>
-        <label for='other'>Other</label>
+        <div class="radio-inline">
+          <label for='male'><input type='radio' name='gender' id='male' value='male'>Male</label>
+        </div>
+        <div class="radio-inline">
+          <label for='female'><input type='radio' name='gender' id='female' value='female'>Female</label>
+        </div> 
+        <div class="radio-inline">
+          <label for='other'><input type='radio' name='gender' id='other' value='other'>Other</label>
+        </div>
+        <span class="help-block has-error" id="genderError">You gotta pick one</span>
       </div>
       <div class="form-group">
         <label for="firstDate">Describe your ideal first date:</label>
-        <input type="text" name="firstDate" class="form-control" id="firstDate">
+        <input type="text" name="firstDate" class="form-control" id="firstDate" placeholder="Give it to him!">
+        <span class="help-block has-error" id="dateError">You gotta fill it in</span>
       </div>
       <div class="form-group">
         <p>What religion are you?</p>
         <input type='radio' name='religion' id='hindu' value="Hindu">
         <label for='hindu'>Hindu</label>
-        <input type='radio' name='religion' id='other' value='Other'>
+        <input type='radio' name='religion' id='other' value='Other' disabled>
         <label for='other'>Other</label>
+        <span class="help-block has-error" id="religionError">You gotta pick one</span>
       </div>
       <button class="btn btn-success" id="submit" type=submit>Submit Answers!</button>
       <button class="btn btn-success" id="reset" type=reset>Reset Quiz</button>
